2004-05-04  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmenuitem.xml (toggle_size_request) Add description.

	* pygtk-gtktextiter.xml (backward_find_char)
	(forward_find_char) Add descriptions of these methods.
	Fix spelling errors.

	* pygtk-gtktextview.xml Spell checked.

	* pygtk-gtktextbuffer.xml Spell checked.

2004-04-30  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Bump release number to 2.4.3

	* pygtk-gtkaction.xml
	* pygtk-gtkactiongroup.xml
	* pygtk-gtkborder.xml
	* pygtk-gtkclipboard.xml
	* pygtk-gtkcolorbutton.xml
	* pygtk-gtkcombobox.xml
	* pygtk-gtkcomboboxentry.xml
	* pygtk-gtkentrycompletion.xml
	* pygtk-gtkexpander.xml
	* pygtk-gtkfilechooser.xml
	* pygtk-gtkfilechooserdialog.xml
	* pygtk-gtkfilechooserwidget.xml
	* pygtk-gtkfilefilter.xml
	* pygtk-gtkfontbutton.xml
	* pygtk-gtkiconinfo.xml
	* pygtk-gtkicontheme.xml
	* pygtk-gtkradioaction.xml
	* pygtk-gtktoolbutton.xml
	* pygtk-gtkseparatortoolitem.xml
	* pygtk-gtktoggleaction.xml
	* pygtk-gtktoggletoolitem.xml
	* pygtk-gtktoolbutton.xml
	* pygtk-gtktoolitem.xml
	* pygtk-gtktreemodelfilter.xml
	* pygtk-gtktreerowreference.xml
	* pygtk-gtkuimanager.xml
	Add a note indicating which release of PyGTK the above were new in.

	============ Release 2.4.2 ===============
2004-04-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkclipboard.xml Fix notes to correct release availabilities
	for object, constructor and methods.

	* pygtk-introduction.xml Update the introduction re: PyGTK 2.4
	and Pango. Also add description of Child Properties.

	* pygtk-gtktreestore.xml (remove) Add return value description.

	* pygtk-gtkliststore.xml (remove) Add return value description.

	* pygtk2-ref.xml Bump release level to 2.4.2

2004-04-27  John Finlay  <finlay@moeraki.com>

	* pygtk-gobject-function.xml (io_add_watch) Add description of
	callback signature.

	* pygtk2-ref.xml Bump release level to 2.4.1

===== Release 2.4 =====

2004-04-27  John Finlay  <finlay@moeraki.com>
