@@ -3,9 +3,9 @@
     "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
 
   <chapter id="pygtk-introduction">
-    <title>Introduction</title>
+  <title>Introduction</title>
 
-    <para>This document describes most of the <literal>PyGTK</literal>
+  <para>This document describes most of the <literal>PyGTK</literal>
 version 2.0 through 2.4 classes and their methods and associated
 functions. Deprecated classes, functions and methods have been specifically
 left out of this reference though classes that have become deprecated since
@@ -14,24 +14,26 @@ attempted to document as much of the <literal>PyGTK</literal>
 <literal>API</literal> as I can but there are undoubtedly errors and
 omissions. If you discover any of these please send me email at
 <email><ulink
-url="mailto:finlay@moeraki.com">finlay@moeraki.com</ulink></email>. Specific
-areas that have not been documented include:</para>
+url="mailto:finlay@moeraki.com">finlay@moeraki.com</ulink></email> or file a
+bug report at <ulink linkend="bugzilla.gnome.org">bugzilla.gnome.org</ulink>
+for the <literal>pygtk</literal> project. Specific areas that have not been
+documented include:</para>
 
-    <itemizedlist>
-      <listitem>
-	<simpara>The ATK classes</simpara>
-      </listitem>
-      <listitem>
-	<simpara>The GladeXML class</simpara>
-      </listitem>
-    </itemizedlist>
+  <itemizedlist>
+    <listitem>
+      <simpara>The ATK classes</simpara>
+    </listitem>
+    <listitem>
+      <simpara>The GladeXML class</simpara>
+    </listitem>
+  </itemizedlist>
 
-    <para>This reference describes the API for <literal>PyGTK</literal> as
+  <para>This reference describes the API for <literal>PyGTK</literal> as
 of version 2.3.92+ and assumes that the additional API changes for version
 2.4 will be minor. There will undoubtedly be changes that are not reflected
 in this reference. The differences in the API between version 2.0 and
 previous versions are denoted in this reference with a Note that describes
-the availability of the obejct, constructor, method or function. Any of
+the availability of the object, constructor, method or function. Any of
 these that do not have a notation can be assumed to be available in all
 versions of PyGTK from 2.0 and up. In the case of properties and signals the
 availability is dependent on the version of the underlying GTK+, GDK or
@@ -43,67 +45,205 @@ the <ulink
 url="http://www.daa.com.au/~james/software/pygtk/"><literal>PyGTK</literal>
 homepage</ulink> for more information.</para>
 
-    <para> The Reference contains a chapter for each
-<literal>PyGTK</literal> module (that correspponds to the underlying
+  <para> The Reference contains a chapter for each
+<literal>PyGTK</literal> module (that corresponds to the underlying
 <literal>GTK+</literal> library) containing the class descriptions. The
 second chapter illustrates the <literal>PyGTK</literal> class hierarchy
 covering the gobject, gtk, gtk.gdk and pango modules.</para>
 
-    <para>The class descriptions are arranged alphabetically
+  <para>The class descriptions are arranged alphabetically
 within the chapters. Currently there are four module chapters:</para>
 
-    <variablelist>
-      <varlistentry>
-	<term>The&nbsp;<literal>gobject</literal>&nbsp;module</term>
-	<listitem><simpara>The classes that are included in the
+  <variablelist>
+    <varlistentry>
+      <term>The&nbsp;<literal>gobject</literal>&nbsp;module</term>
+      <listitem><simpara>The classes that are included in the
 <literal>gobject</literal> module of <literal>PyGTK</literal> and are
 accessed similar to: gobject.GObject. These classes are the base object
 classes that the <literal>gtk</literal> and <literal>gtk.gdk</literal>
 module classes are built on.</simpara>
-	</listitem>
-      </varlistentry>
-      <varlistentry>
-	<term>The&nbsp;<literal>gtk</literal>&nbsp;module</term>
-	<listitem><simpara>The classes that are included in the
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>The&nbsp;<literal>gtk</literal>&nbsp;module</term>
+      <listitem><simpara>The classes that are included in the
 <literal>gtk</literal> module of <literal>PyGTK</literal> and are accessed
 similar to: gtk.Widget. These classes are the "higher" level widget classes
-that provide most of the user interface widgets used for applcation
+that provide most of the user interface widgets used for application
 development.</simpara>
-	</listitem>
-      </varlistentry>
-      <varlistentry>
-	<term>The&nbsp;<literal>gtk.gdk</literal>&nbsp;module</term>
-	<listitem><simpara>The classes that are included in the
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>The&nbsp;<literal>gtk.gdk</literal>&nbsp;module</term>
+      <listitem><simpara>The classes that are included in the
 <literal>gtk.gdk</literal> module of <literal>PyGTK</literal>. These classes
 are "lower" level classes that provide more fundamental capabilities that
 the <literal>gtk</literal> module widgets are built upon. These classes
 provide an abstract interface to the underlying window system (either X
 Window System or Microsoft Windows).</simpara>
-	</listitem>
-      </varlistentry>
-      <varlistentry>
-	<term>The&nbsp;<literal>pango</literal>&nbsp;module</term>
-	<listitem>
-	  <simpara>The classes that are included in the
+      </listitem>
+    </varlistentry>
+    <varlistentry>
+      <term>The&nbsp;<literal>pango</literal>&nbsp;module</term>
+      <listitem>
+	<simpara>The classes that are included in the
 <literal>pango</literal> module of <literal>PyGTK</literal>. These classes
 provide access to the Pango text layout and rendering engines. PyGTK
 supports a subset of the full Pango capability: mainly the high level layout
-capabilites exposed by the pango.Layout objects. The low level rendering
-capabilites have not been exposed mostly because there isn't a full GObject
+capabilities exposed by the pango.Layout objects. The low level rendering
+capabilities have not been exposed mostly because there isn't a full GObject
 interface to the underlying Pango data structures. It's also likely that the
 rendering capabilities require more performance that Python can
 provide.</simpara>
-	</listitem>
-      </varlistentry>
-    </variablelist>
+      </listitem>
+    </varlistentry>
+  </variablelist>
 
-    <para>The <literal>atk</literal> module classes will be added in a later
+  <para>The <literal>atk</literal> module classes will be added in a later
 version of this Reference.</para>
 
-    <sect1 id="pygtk-reference-format">
-      <title>Reference Page Format</title>
+  <sect1>
+    <title>Major Changes since Version 1.9</title>
 
-      <para>Each <literal>PyGTK</literal> class is described in a reference
+    <para>The major changes in this document since version 1.9
+include:</para>
+
+    <itemizedlist>
+      <listitem>
+	<para>descriptions of new GTK+ 2.2 and 2.4 classes:</para>
+
+	<itemizedlist>
+	  <listitem>
+	    <simpara><link linkend="class-gobjectgboxed"><classname>gobject.GBoxed</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gobjectgpointer"><classname>gobject.GPointer</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gobjectginterface"><classname>gobject.GInterface</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gobjectmaincontext"><classname>gobject.MainContext</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gobjectmainloop"><classname>gobject.MainLoop</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkaction"><classname>gtk.Action</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkactiongroup"><classname>gtk.ActionGroup</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkborder"><classname>gtk.Border</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkclipboard"><classname>gtk.Clipboard</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkcolorbutton"><classname>gtk.ColorButton</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkcombobox"><classname>gtk.ComboBox</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkcomboboxentry"><classname>gtk.ComboBoxEntry</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkentrycompletion"><classname>gtk.EntryCompletion</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkexpander"><classname>gtk.Expander</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkfilechooser"><classname>gtk.FileChooser</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkfilechooserdialog"><classname>gtk.FileChooserDialog</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkfilechooserwidget"><classname>gtk.FileChooserWidget</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkfilefilter"><classname>gtk.FileFilter</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkfontbutton"><classname>gtk.FontButton</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkiconinfo"><classname>gtk.IconInfo</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkicontheme"><classname>gtk.IconTheme</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkradioaction"><classname>gtk.RadioAction</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkradiotoolbutton"><classname>gtk.RadioToolButton</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkseparatortoolitem"><classname>gtk.SeparatorToolItem</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtktoggleaction"><classname>gtk.ToggleAction</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtktoggletoolbutton"><classname>gtk.ToggleToolButton</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtktoolbutton"><classname>gtk.ToolButton</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtktoolitem"><classname>gtk.ToolItem</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtktreemodelfilter"><classname>gtk.TreeModelFilter</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtktreerowreference"><classname>gtk.TreeRowReference</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gtkuimanager"><classname>gtk.UIManager</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gdkatom"><classname>gtk.gdk.Atom</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gdkdisplaymanager"><classname>gtk.gdk.DisplayManager</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-gdkscreen"><classname>gtk.gdk.Screen</classname></link></simpara>
+	  </listitem>
+	  <listitem>
+	    <simpara><link linkend="class-pangofontsetsimple"><classname>pango.FontsetSimple</classname></link></simpara>
+	  </listitem>
+	</itemizedlist>
+
+      </listitem>
+      <listitem>
+	<para>a reference page in each module chapter containing
+descriptions of or links to all of the functions defined in a module.</para>
+      </listitem>
+      <listitem>
+	<para>a reference page in each module chapter containing
+descriptions of all of the constants defined in a module.</para>
+      </listitem>
+      <listitem>
+	<para>additional methods, functions, properties and signals added
+for GTK+ 2.2, GTK+ 2.4, PyGTK 2.2 and PyGTK 2.4.</para>
+      </listitem>
+    </itemizedlist>
+
+  </sect1>
+
+  <sect1 id="pygtk-reference-format">
+    <title>Reference Page Format</title>
+
+    <para>Each <literal>PyGTK</literal> class is described in a reference
 page that has a number of sections in a fixed format. Each reference page
 will have a subset of the following sections:</para>
 
@@ -111,30 +251,30 @@ will have a subset of the following sections:</para>
       <varlistentry>
 	<term>Name</term>
 	<listitem>
-	    <simpara>The name and a one-line description of the
+	  <simpara>The name and a one-line description of the
 class.</simpara>
 	</listitem>
       </varlistentry>
       <varlistentry>
 	<term>Synopsis</term>
 	<listitem>
-	    <simpara>A synopsis of the class and its methods and
+	  <simpara>A synopsis of the class and its methods and
 optionally a list of associated functions.</simpara>
 	</listitem>
       </varlistentry>
       <varlistentry>
 	<term>Ancestry</term>
 	<listitem>
-	    <simpara>The list of the parent classes of the class. This
+	  <simpara>The list of the parent classes of the class. This
 section may not be present in all class descriptions.</simpara>
 	</listitem>
       </varlistentry>
       <varlistentry>
 	<term>Properties</term>
  	<listitem>
-	    <simpara>A list of the properties (internal state)
+	  <simpara>A list of the properties (internal state)
 supported by the class. This section may not be present in all classes. The
-property descriptons include the name, the access operations (e.g. Read,
+property descriptions include the name, the access operations (e.g. Read,
 Write), and a brief description. Properties are accessed using the <link
 linkend="method-gobject--set-property"><methodname>gobject.set_property</methodname>()</link> 
 and <link
@@ -145,8 +285,8 @@ section may not be present in all class descriptions.</simpara>
       </varlistentry>
       <varlistentry>
 	<term>Style&nbsp;Properties</term>
-	  <listitem>
-	    <simpara>A list of style properties supported by the
+	<listitem>
+	  <simpara>A list of style properties supported by the
 class. Similar to the properties (described above) the style properties hold
 information about the style of a widgets e.g. border style, shadow type,
 etc. Most widgets do not support style properties so this section is not
@@ -156,8 +296,8 @@ style properties.</simpara>
       </varlistentry>
       <varlistentry>
 	<term>Child&nbsp;Properties</term>
-	  <listitem>
-	    <simpara>A list of child properties supported by the
+	<listitem>
+	  <simpara>A list of child properties supported by the
 class. Similar to the properties (described above) the child properties hold
 information about the properties of a widget's child widget. Only container
 widgets support child properties so this section is not present in most
@@ -167,7 +307,7 @@ class descriptions.</simpara>
       <varlistentry>
 	<term>Attributes</term>
 	<listitem>
-	    <simpara>A set of internal object state data accessible as
+	  <simpara>A set of internal object state data accessible as
 Python attributes (e.g. object.attr). The attribute descriptions include a
 name by which the attribute data is accessed, the access mode (e.g. Read,
 Write), and a brief description of the attribute. Most
@@ -178,7 +318,7 @@ is not present in most class descriptions.</simpara>
       <varlistentry>
 	<term>Signal&nbsp;Prototypes</term>
 	<listitem>
-	    <simpara>A list of the signals supported by the class
+	  <simpara>A list of the signals supported by the class
 including the signal name and a synopsis of the signal handler function
 prototype. This section may not be present in all class descriptions; most
 <literal>gtk.gdk</literal> classes do not support signals.</simpara>
@@ -193,7 +333,7 @@ the methods supported by the class.</simpara>
       <varlistentry>
 	<term>Constructor</term>
 	<listitem>
-	    <simpara>The description of the class object constructor
+	  <simpara>The description of the class object constructor
 including the synopsis with brief parameter descriptions and a description
 of th use of the constructor. There may be more than one constructor
 description if the constructor supports different parameter lists. This
@@ -203,7 +343,7 @@ section may not be present in all class descriptions.</simpara>
       <varlistentry>
 	<term>Methods</term>
 	<listitem>
-	    <simpara>A list of methods supported by the class. Each
+	  <simpara>A list of methods supported by the class. Each
 method description includes: a synopsis of the method and its parameters as
 well as a brief description of each parameter and return value (if any);
 and, a description of the use of the method.</simpara>
@@ -212,7 +352,7 @@ and, a description of the use of the method.</simpara>
       <varlistentry>
 	<term>Functions</term>
 	<listitem>
-	    <simpara>A list of related functions. Each function
+	  <simpara>A list of related functions. Each function
 description includes a synopsis of the function and its parameters and
 return value (if any), and a description of the use of the
 function.</simpara>
@@ -221,7 +361,7 @@ function.</simpara>
       <varlistentry>
 	<term>Signals</term>
 	<listitem>
-	    <simpara>A list of signals including a synopsis of the
+	  <simpara>A list of signals including a synopsis of the
 signal handler prototype function with its parameters and return value (if
 any). The signal emission conditions are briefly described. This section is
 not present in all class descriptions; specifically, the
@@ -262,19 +402,19 @@ gtk.Button(stock=None, label="Cancel")
 <emphasis>italic</emphasis> and must be specified positionally but may also
 be optional.</para>
 
-    </sect1>
+  </sect1>
 
-    <sect1 id="pygtk-reference-copyright">
-      <title>Copyright and License Notice</title>
+  <sect1 id="pygtk-reference-copyright">
+    <title>Copyright and License Notice</title>
 
-      <para>The PyGTK 2.0 Reference is Copyright (C) 2004 John
+    <para>The PyGTK 2.0 Reference is Copyright (C) 2004 John
 Finlay.</para>
 
-      <para>This work is licensed under the Creative Commons
+    <para>This work is licensed under the Creative Commons
 Attribution-ShareAlike License. To view a copy of this license, visit
 <ulink url="http://creativecommons.org/licenses/by-sa/1.0/">http://creativecommons.org/licenses/by-sa/1.0/</ulink> or send a letter to Creative
 Commons, 559 Nathan Abbott Way, Stanford, California 94305, USA.</para>
 
-    </sect1>
+  </sect1>
 
   </chapter>
