@@ -10,6 +10,8 @@
 
 	* pygtk-gtktextbuffer.xml Spell checked.
 
+	* pygtk-introduction.xml Add section listing major changes since 1.9.
+
 2004-04-30  John Finlay  <finlay@moeraki.com>
 
 	* pygtk2-ref.xml Bump release number to 2.4.3
